--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
+    <div class="dark-toggle" onclick="toggleDarkMode()">🌙</div>
+<div class="hamburger" onclick="alert('Menu binnenkort!')">
+  <div></div>
+  <div></div>
+  <div></div>
+</div>
+
     <div class="container">
         <header>
             <h1>OmDeHoek</h1>
