--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 
     <div class="container">
         <header>
-            <div class="dark-toggle" onclick="toggleDarkMode()">🌙</div>
-            <div class="hamburger" onclick="alert('Menu binnenkort!')">
-              <div></div>
-              <div></div>
-              <div></div>
+            <div class="top-bar">
+              <div class="dark-toggle" onclick="toggleDarkMode()">🌙</div>
+              <div class="hamburger" onclick="alert('Menu binnenkort!')">
+                <div></div>
+                <div></div>
+                <div></div>
+              </div>
             </div>
             <h1>OmDeHoek</h1>
             <h2>🎉 Wat is er te doen in de buurt?</h2>
