--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 
         <main>
             <div id="resultaten" class="resultaten-grid"></div>
+            <div id="loader" class="loader hidden">🔄 Locaties ophalen...</div>
+
         </main>
     </div>
 
